--- a/OnlineChat.WebUI/OnlineChat.WebUI.csproj
+++ b/OnlineChat.WebUI/OnlineChat.WebUI.csproj
@@ -7,7 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.11">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OnlineChat.Core\OnlineChat.Core.csproj" />
+    <ProjectReference Include="..\OnlineChat.Infrastructure\OnlineChat.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
