--- a/OnlineChat.WebUI/appsettings.json
+++ b/OnlineChat.WebUI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=OnlineChat;Trusted_Connection=True;"
+  }
 }
