chore: adding identity configure to appsettings, get it in code

--- a/OnlineChat.WebUI/appsettings.json
+++ b/OnlineChat.WebUI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=OnlineChat;Trusted_Connection=True;"
+  },
+  "Identity": {
+    "DefaultRole": "User",
+    "SecurityKey": "aksdokjafbkjasbfjabojsfbda",
+    "ExpiresHours": 12
   }
 }
