--- a/OnlineChat.WebUI/OnlineChat.WebUI.csproj
+++ b/OnlineChat.WebUI/OnlineChat.WebUI.csproj
@@ -17,8 +17,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OnlineChat.Core\OnlineChat.Core.csproj" />
-    <ProjectReference Include="..\OnlineChat.Infrastructure\OnlineChat.Infrastructure.csproj" />
+    <ProjectReference Include="..\Application\Application.csproj" />
+    <ProjectReference Include="..\Configurations\Configurations.csproj" />
+    <ProjectReference Include="..\Contracts\Contracts.csproj" />
+    <ProjectReference Include="..\EntityFramework.MicrosoftSQL\EntityFramework.MicrosoftSQL.csproj" />
+    <ProjectReference Include="..\Repositories\Repositories.csproj" />
   </ItemGroup>
 
 </Project>
