--- a/OnlineChat.Infrastructure/Repositories/Repositories.csproj
+++ b/OnlineChat.Infrastructure/Repositories/Repositories.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Application\Application.csproj" />
+    <ProjectReference Include="..\..\OnlineChat.Core\Application\Application.csproj" />
     <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
 
