chore: remove custom exception, middleware for global error handling. Instead this adding Hellang.Middleware.ProblemDetails

--- a/OnlineChat.Core/Application/Application.csproj
+++ b/OnlineChat.Core/Application/Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.4.0" />
+    <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.5.1" />
     <PackageReference Include="MediatR" Version="11.1.0" />
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.11" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.11" />
@@ -19,7 +20,6 @@
     <ProjectReference Include="..\..\Resources\Resources.csproj" />
     <ProjectReference Include="..\Configurations\Configurations.csproj" />
     <ProjectReference Include="..\Contracts\Contracts.csproj" />
-    <ProjectReference Include="..\Exceptions\Exceptions.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
