chore: adding blob storage service

--- a/OnlineChat.WebUI/appsettings.json
+++ b/OnlineChat.WebUI/appsettings.json
@@ -7,11 +7,15 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=OnlineChat;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=OnlineChat;Trusted_Connection=True;",
+    "AzureBlobConnection": "UseDevelopmentStorage=true"
   },
   "Identity": {
     "DefaultRole": "User",
     "SecurityKey": "aksdokjafbkjasbfjabojsfbda",
     "ExpiresHours": 12
+  },
+  "AzureBlob": {
+    "DirectMessagesContainer": "direct"
   }
 }
