--- a/OnlineChat.Core/Application/Application.csproj
+++ b/OnlineChat.Core/Application/Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.14.1" />
     <PackageReference Include="FluentValidation" Version="11.4.0" />
     <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.5.1" />
     <PackageReference Include="MediatR" Version="11.1.0" />
@@ -26,7 +27,6 @@
   <ItemGroup>
     <Folder Include="Validators\Queries\ConversationMessage\" />
     <Folder Include="Validators\Queries\Participant\" />
-    <Folder Include="Validators\Commands\DirectMessage\" />
     <Folder Include="Validators\Commands\ConversationMessage\" />
   </ItemGroup>
 
