--- a/OnlineChat.Core/Contracts/Contracts.csproj
+++ b/OnlineChat.Core/Contracts/Contracts.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Views\Participant\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+  </ItemGroup>
+
 </Project>
