--- a/Online.Chat.Crone/Online.Chat.Crone.csproj
+++ b/Online.Chat.Crone/Online.Chat.Crone.csproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.12" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
     <PackageReference Include="MassTransit" Version="8.0.12" />
   </ItemGroup>
