--- a/OnlineChat.Cron/Properties/launchSettings.json
+++ b/OnlineChat.Cron/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:14864",
-      "sslPort": 44319
+      "applicationUrl": "http://localhost:13797",
+      "sslPort": 44321
     }
   },
   "profiles": {
-    "OnlineChat.WebUI": {
+    "OnlineChat.Cron": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7104;http://localhost:5012",
+      "launchUrl": "hangfire",
+      "applicationUrl": "https://localhost:7120;http://localhost:5153",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
