chore: install hangfire

--- a/Online-Chat-Cron/OnlineChat.Cron/appsettings.json
+++ b/Online-Chat-Cron/OnlineChat.Cron/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "HangfireConnection": "Server=(localdb)\\mssqllocaldb;Database=Hangfire;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
