--- a/Online-Chat-Cron/OnlineChat.Cron/appsettings.json
+++ b/Online-Chat-Cron/OnlineChat.Cron/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=OnlineChat;Trusted_Connection=True;",
     "HangfireConnection": "Server=(localdb)\\mssqllocaldb;Database=Hangfire;Trusted_Connection=True;"
   },
   "Logging": {
