--- a/Online-Chat-Server/OnlineChat.Core/Application/Application.csproj
+++ b/Online-Chat-Server/OnlineChat.Core/Application/Application.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.11" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.25.1" />
     <PackageReference Include="OnlineChat.MassTransit" Version="1.0.0" />
+    <PackageReference Include="QuestPDF" Version="2022.12.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.1" />
   </ItemGroup>
 
