--- a/Online-Chat-Server/OnlineChat.Core/Application/Application.csproj
+++ b/Online-Chat-Server/OnlineChat.Core/Application/Application.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Configurations\Configurations.csproj" />
     <ProjectReference Include="..\Contracts\Contracts.csproj" />
+    <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\Resources\Resources.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
