--- a/Online-Chat-Server/OnlineChat.WebUI/OnlineChat.WebUI.csproj
+++ b/Online-Chat-Server/OnlineChat.WebUI/OnlineChat.WebUI.csproj
@@ -25,7 +25,7 @@
     <ProjectReference Include="..\OnlineChat.Core\Application\Application.csproj" />
     <ProjectReference Include="..\OnlineChat.Core\Configurations\Configurations.csproj" />
     <ProjectReference Include="..\OnlineChat.Core\Contracts\Contracts.csproj" />
-    <ProjectReference Include="..\OnlineChat.Infrastructure\EntityFramework.MicrosoftSQL\EntityFramework.SqlServer.csproj" />
+    <ProjectReference Include="..\OnlineChat.Infrastructure\EntityFramework.SqlServer\EntityFramework.SqlServer.csproj" />
     <ProjectReference Include="..\OnlineChat.Infrastructure\Repositories\Repositories.csproj" />
   </ItemGroup>
 
