--- a/Online-Chat-Server/OnlineChat.Core/Application/Application.csproj
+++ b/Online-Chat-Server/OnlineChat.Core/Application/Application.csproj
@@ -25,6 +25,7 @@
     <ProjectReference Include="..\Configurations\Configurations.csproj" />
     <ProjectReference Include="..\Contracts\Contracts.csproj" />
     <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\Repositories.Abstractions\Repositories.Abstractions.csproj" />
     <ProjectReference Include="..\Resources\Resources.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
