--- a/Online-Chat-Server/OnlineChat.Infrastructure/Shared/Shared.csproj
+++ b/Online-Chat-Server/OnlineChat.Infrastructure/Shared/Shared.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\OnlineChat.Core\Application\Application.csproj" />
+    <ProjectReference Include="..\..\OnlineChat.Core\Domain\Domain.csproj" />
   </ItemGroup>
 
 </Project>
