--- a/Online-Chat-Server/OnlineChat.Core/Repositories.Abstractions/Repositories.Abstractions.csproj
+++ b/Online-Chat-Server/OnlineChat.Core/Repositories.Abstractions/Repositories.Abstractions.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
 </Project>
