--- a/Online-Chat-Server/OnlineChat.Infrastructure/Repositories/Repositories.csproj
+++ b/Online-Chat-Server/OnlineChat.Infrastructure/Repositories/Repositories.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\OnlineChat.Core\Application\Application.csproj" />
+    <ProjectReference Include="..\..\OnlineChat.Core\Domain\Domain.csproj" />
     <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
 
