--- a/Online-Chat-Server/OnlineChat.Core/Application/Application.csproj
+++ b/Online-Chat-Server/OnlineChat.Core/Application/Application.csproj
@@ -27,7 +27,7 @@
     <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Repositories.Abstractions\Repositories.Abstractions.csproj" />
     <ProjectReference Include="..\Resources\Resources.csproj" />
-    <ProjectReference Include="..\Services\Services.csproj" />
+    <ProjectReference Include="..\Services.Abstractions\Services.Abstractions.csproj" />
   </ItemGroup>
 
 	<Target Name="Mapster" AfterTargets="AfterBuild">
