--- a/Online-Chat-Server/OnlineChat.Infrastructure/Infrastructure.Services/Infrastructure.Services.csproj
+++ b/Online-Chat-Server/OnlineChat.Infrastructure/Infrastructure.Services/Infrastructure.Services.csproj
@@ -1,14 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.14.1" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\OnlineChat.Core\Services.Abstractions\Services.Abstractions.csproj" />
