--- a/Online-Chat-Server/OnlineChat.Core/Application/Application.csproj
+++ b/Online-Chat-Server/OnlineChat.Core/Application/Application.csproj
@@ -18,10 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\OnlineChat.DataAccess\Domain\Domain.csproj" />
+    <ProjectReference Include="..\..\OnlineChat.DataAccess\Repositories.Abstractions\Repositories.Abstractions.csproj" />
     <ProjectReference Include="..\Configurations\Configurations.csproj" />
     <ProjectReference Include="..\Contracts\Contracts.csproj" />
-    <ProjectReference Include="..\Domain\Domain.csproj" />
-    <ProjectReference Include="..\Repositories.Abstractions\Repositories.Abstractions.csproj" />
     <ProjectReference Include="..\Resources\Resources.csproj" />
     <ProjectReference Include="..\Services.Abstractions\Services.Abstractions.csproj" />
   </ItemGroup>
