--- a/Online-Chat-Server/OnlineChat.Infrastructure/Shared/Shared.csproj
+++ b/Online-Chat-Server/OnlineChat.Infrastructure/Shared/Shared.csproj
@@ -11,8 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\OnlineChat.Core\Domain\Domain.csproj" />
     <ProjectReference Include="..\..\OnlineChat.Core\Resources\Resources.csproj" />
+    <ProjectReference Include="..\..\OnlineChat.DataAccess\Domain\Domain.csproj" />
   </ItemGroup>
 
 </Project>
