--- a/Online-Chat-Server/OnlineChat.WebUI/OnlineChat.WebUI.csproj
+++ b/Online-Chat-Server/OnlineChat.WebUI/OnlineChat.WebUI.csproj
@@ -27,8 +27,8 @@
     <ProjectReference Include="..\OnlineChat.Core\Configurations\Configurations.csproj" />
     <ProjectReference Include="..\OnlineChat.Core\Contracts\Contracts.csproj" />
     <ProjectReference Include="..\OnlineChat.Infrastructure\EntityFramework.SqlServer\EntityFramework.SqlServer.csproj" />
-    <ProjectReference Include="..\OnlineChat.Infrastructure\Infrastructure.Services\Infrastructure.Services.csproj" />
     <ProjectReference Include="..\OnlineChat.Infrastructure\Repositories\Repositories.csproj" />
+    <ProjectReference Include="..\OnlineChat.Infrastructure\Services\Services.csproj" />
   </ItemGroup>
 
 </Project>
