--- a/Online-Chat-Server/OnlineChat.Core/Application/Application.csproj
+++ b/Online-Chat-Server/OnlineChat.Core/Application/Application.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="MassTransit" Version="8.0.12" />
     <PackageReference Include="MediatR" Version="11.1.0" />
     <PackageReference Include="OnlineChat.MassTransit" Version="1.0.0" />
+    <PackageReference Include="NuGet.MassTransit" Version="1.0.0" />
     <PackageReference Include="QuestPDF" Version="2022.12.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.1" />
   </ItemGroup>
