--- a/Online-Chat-Server/OnlineChat.WebUI/appsettings.json
+++ b/Online-Chat-Server/OnlineChat.WebUI/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=OnlineChat;Trusted_Connection=True;",
-    "AzureBlobConnection": "UseDevelopmentStorage=true"
+    "AzureBlobConnection": "UseDevelopmentStorage=true",
+    "ClerkConnection": "https://localhost:7270/api/"
   },
   "Identity": {
     "DefaultRole": "User",
