--- a/Online-Chat-NuGet/NuGet.Clerk/NuGet.Clerk.Core/NuGet.Clerk.Core.csproj
+++ b/Online-Chat-NuGet/NuGet.Clerk/NuGet.Clerk.Core/NuGet.Clerk.Core.csproj
@@ -4,9 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
   </ItemGroup>
 
