--- a/Online-Chat-NuGet/NuGet.Clerk/NuGet.Clerk.Core/NuGet.Clerk.Core.csproj
+++ b/Online-Chat-NuGet/NuGet.Clerk/NuGet.Clerk.Core/NuGet.Clerk.Core.csproj
@@ -4,16 +4,13 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>1.1.0</Version>
+    <Version>1.2.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\NuGet.Clerk.Abstractions\NuGet.Clerk.Abstractions.csproj" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+    <PackageReference Include="NuGet.Clerk.Abstractions" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
