--- a/Online-Chat-NuGet/NuGet.Clerk/NuGet.Clerk.DependencyInjection/NuGet.Clerk.DependencyInjection.csproj
+++ b/Online-Chat-NuGet/NuGet.Clerk/NuGet.Clerk.DependencyInjection/NuGet.Clerk.DependencyInjection.csproj
@@ -4,16 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\NuGet.Clerk.Abstractions\NuGet.Clerk.Abstractions.csproj" />
-    <ProjectReference Include="..\NuGet.Clerk.Core\NuGet.Clerk.Core.csproj" />
+    <PackageReference Include="NuGet.Clerk.Abstractions" Version="1.0.0" />
+    <PackageReference Include="NuGet.Clerk.Core" Version="1.2.0" />
   </ItemGroup>
 
 </Project>
