--- a/Online-Chat-NuGet/NuGet.Clerk/NuGet.Clerk.Core/NuGet.Clerk.Core.csproj
+++ b/Online-Chat-NuGet/NuGet.Clerk/NuGet.Clerk.Core/NuGet.Clerk.Core.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Version>1.2.0</Version>
+    <PackageOutputPath>../../.packages</PackageOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
