--- a/Online-Chat-NuGet/NuGet.Clerk/NuGet.Clerk/NuGet.Clerk.csproj
+++ b/Online-Chat-NuGet/NuGet.Clerk/NuGet.Clerk/NuGet.Clerk.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageOutputPath>../../.packages</PackageOutputPath>
   </PropertyGroup>
 	<ItemGroup>
 	  <PackageReference Include="NuGet.Clerk.Abstractions" Version="1.0.0" />
