--- a/Online-Chat-NuGet/NuGet.Clerk/NuGet.Clerk/NuGet.Clerk.csproj
+++ b/Online-Chat-NuGet/NuGet.Clerk/NuGet.Clerk/NuGet.Clerk.csproj
@@ -1,15 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PackageOutputPath>../../.packages</PackageOutputPath>
+	<Version>6.0.0</Version>
+	<PackageOutputPath>../../.packages</PackageOutputPath>
   </PropertyGroup>
 	<ItemGroup>
-	  <PackageReference Include="NuGet.Clerk.Abstractions" Version="1.0.0" />
-	  <PackageReference Include="NuGet.Clerk.Core" Version="1.2.0" />
-	  <PackageReference Include="NuGet.Clerk.DependencyInjection" Version="1.1.0.1" />
-	  <PackageReference Include="NuGet.Clerk.Models" Version="1.1.0" />
+	  <PackageReference Include="NuGet.Clerk.Abstractions" Version="6.0.0" />
+	  <PackageReference Include="NuGet.Clerk.Core" Version="6.0.0" />
+	  <PackageReference Include="NuGet.Clerk.DependencyInjection" Version="6.0.0" />
+	  <PackageReference Include="NuGet.Clerk.Models" Version="6.0.0" />
 	</ItemGroup>
 
 </Project>
