--- a/Online-Chat-NuGet/NuGet.MassTransit/NuGet.MassTransit.csproj
+++ b/Online-Chat-NuGet/NuGet.MassTransit/NuGet.MassTransit.csproj
@@ -4,7 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PackageOutputPath>../.packages</PackageOutputPath>
+	<Version>6.0.0</Version>
+	<PackageOutputPath>../.packages</PackageOutputPath>
   </PropertyGroup>
 
 </Project>
