--- a/Online-Chat-Clerk/Clerk.WebUI/appsettings.json
+++ b/Online-Chat-Clerk/Clerk.WebUI/appsettings.json
@@ -6,5 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "SecurityKey": "aksdokjafbkjasbfjabojsfbda"
+  "Authentication": {
+    "SecurityKey": ""
+  }
 }
