--- a/Online-Chat-Server/OnlineChat.WebUI/appsettings.json
+++ b/Online-Chat-Server/OnlineChat.WebUI/appsettings.json
@@ -11,9 +11,11 @@
     "AzureBlobConnection": "UseDevelopmentStorage=true",
     "ClerkConnection": "https://localhost:7270/api/"
   },
+  "Authentication": {
+    "SecurityKey": ""
+  },
   "Identity": {
     "DefaultRole": "User",
-    "SecurityKey": "aksdokjafbkjasbfjabojsfbda",
     "ExpiresHours": 12
   },
   "AzureBlob": {
