refactor: updating project architecture

--- a/Online-Chat-Cron/Cron.Core/Application/Application.csproj
+++ b/Online-Chat-Cron/Cron.Core/Application/Application.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="NuGet.MassTransit" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Repositories.Abstractions\Repositories.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
