--- a/Online-Chat-Cron/Cron.Core/Repositories.Abstractions/Repositories.Abstractions.csproj
+++ b/Online-Chat-Cron/Cron.Core/Repositories.Abstractions/Repositories.Abstractions.csproj
@@ -7,11 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.0.123" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Shared\Shared.csproj" />
+    <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
 </Project>
