--- a/Online-Chat-Cron/Cron.Infrastucture/Repositories/Repositories.csproj
+++ b/Online-Chat-Cron/Cron.Infrastucture/Repositories/Repositories.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Cron.Core\Repositories.Abstractions\Repositories.Abstractions.csproj" />
     <ProjectReference Include="..\Shared\Shared.csproj" />
   </ItemGroup>
 
