--- a/Online-Chat-Server/OnlineChat.WebUI/appsettings.json
+++ b/Online-Chat-Server/OnlineChat.WebUI/appsettings.json
@@ -9,7 +9,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=OnlineChat;Trusted_Connection=True;",
     "AzureBlobConnection": "UseDevelopmentStorage=true",
-    "ClerkConnection": "https://localhost:7270/api/"
+    "ClerkConnection": "https://localhost:7270/api/",
+    "RedisConnection": "localhost"
   },
   "Authentication": {
     "SecurityKey": ""
