--- a/Online-Chat-Server/OnlineChat.WebUI/OnlineChat.WebUI.csproj
+++ b/Online-Chat-Server/OnlineChat.WebUI/OnlineChat.WebUI.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="NuGet.Clerk.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="NuGet.MassTransit" Version="6.0.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.104" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
