chore: working with smtp server, sending email code

--- a/Online-Chat-Server/OnlineChat.WebUI/appsettings.json
+++ b/Online-Chat-Server/OnlineChat.WebUI/appsettings.json
@@ -21,5 +21,12 @@
   },
   "AzureBlob": {
     "DirectMessagesContainer": "direct"
+  },
+  "Email": {
+    "From": "",
+    "SmtpServer": "",
+    "Port": 0,
+    "Username": "",
+    "Password": ""
   }
 }
