--- a/Online-Chat-Server/OnlineChat.Infrastructure/Services/Services.csproj
+++ b/Online-Chat-Server/OnlineChat.Infrastructure/Services/Services.csproj
@@ -9,10 +9,12 @@
   <ItemGroup>
     <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.5.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.6.104" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\OnlineChat.Core\Configurations\Configurations.csproj" />
     <ProjectReference Include="..\..\OnlineChat.Core\Resources\Resources.csproj" />
     <ProjectReference Include="..\..\OnlineChat.Core\Services.Abstractions\Services.Abstractions.csproj" />
   </ItemGroup>
